--- a/index.html
+++ b/index.html
@@ -730,15 +730,13 @@
 						<h2 class="ftco-heading-2">About</h2>
 						<p>Portfolio for professional networking and existing on the internet.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="https://instagram.com/bantai.bombil"target="_blank">
-								<span class="icon-instagram"></span></a></li>
 							<li class="ftco-animate"><a href="https://github.com/mayukhsil" target="_blank"><span
 										class="icon-github-alt"></span></a></li>
 							<li class="ftco-animate"><a href="https://twitter.com/SilMayukh" target="_blank"><span
 										class="icon-twitter-square"></span></a></li>
-							<li class="ftco-animate"><a href="https://linkedin.com/in/mayukhsil" target="_blank"><span
-										class="icon-linkedin2"></span></a></li>
-							
+							<div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal"
+								data-theme="light" data-vanity="mayukhsil"><a class="LI-simple-link"
+									href='https://in.linkedin.com/in/mayukhsil?trk=profile-badge'>LinkedIn - Mayukh Sil</a></div>
 						</ul>
 					</div>
 				</div>
@@ -818,6 +816,7 @@
 	<script src="js/aos.js"></script>
 	<script src="js/jquery.animateNumber.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
+	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 
 	<script src="js/main.js"></script>
@@ -826,7 +825,7 @@
 			//Preloader
 			function hidePreloader() {
 				var preloader = $('#preloader');
-				preloader.fadeOut(500);
+				preloader.fadeOut(900);
 			}
 			hidePreloader();
 
