--- a/index.html
+++ b/index.html
@@ -735,8 +735,8 @@
 							<li class="ftco-animate"><a href="https://twitter.com/SilMayukh" target="_blank"><span
 										class="icon-twitter-square"></span></a></li>
 							<div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal"
-								data-theme="light" data-vanity="mayukhsil"><a class="LI-simple-link"
-									href='https://in.linkedin.com/in/mayukhsil?trk=profile-badge'>LinkedIn - Mayukh Sil</a></div>
+								data-theme="dark" data-vanity="mayukhsil"><a class="LI-simple-link"
+									href='https://in.linkedin.com/in/mayukhsil?trk=profile-badge'>Mayukh Sil</a></div>
 						</ul>
 					</div>
 				</div>
