--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
 										class="icon-twitter-square"></span></a></li>
 							<div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal"
 								data-theme="dark" data-vanity="mayukhsil"><a class="LI-simple-link"
-									href='https://in.linkedin.com/in/mayukhsil?trk=profile-badge'>Mayukh Sil</a></div>
+									href='https://in.linkedin.com/in/mayukhsil?trk=profile-badge'>LinkedIn -</br>Mayukh Sil</a></div>
 						</ul>
 					</div>
 				</div>
