stable build push

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
   <link href="css/style.css" rel="stylesheet">
   
   <!--Favicon-->
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
+  <link rel="icon" href="images/icons/favicon.png" type="image/x-icon">
 
 </head>
 
@@ -211,14 +211,25 @@
       class="btn btn-primary">Download CV</a>
     </div>
   </div>
+</br>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <a href="https://medium.com/@mayukh.sil7"
+          class="btn btn-fourth"><img src="images/icons/medium.png"> Medium Blog</a>
+      </div>
+    </div>
 </div>
+</div>
+</br>
+
 <!-- contact -->
 <section class="section section-on-footer" data-background="images/backgrounds/bg-dots.png">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
         <h2 class="section-title">Contact Info</h2>
-      </div>
+        </div>
       <div class="col-lg-8 mx-auto">
         <div class="bg-white rounded text-center p-5 shadow-down">
           <h4 class="mb-80">Contact Form</h4>
