--- a/index.html
+++ b/index.html
@@ -292,8 +292,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                    <ha1>Under Development!</ha1>
-                    <h3>Till then check my <a href="https://www.github.com/mayukhsil"><ha2>Github</ha2></a></h3>
+                    <ha1>Under Development!</br></ha1>
+                    <h3>Till then check my <a class="btn btn-block" href="https://www.github.com/mayukhsil">
+                        <ha2>Github</ha2>
+                    </a></h3>
                     </div>
                 </div>
             </div>
