stable build push

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     </section>
     <!-- /education -->
 
-    <!-- services --
+    <!-- services --->
     <section class="section">
         <div class="container">
             <div class="row">
@@ -254,32 +254,62 @@
                         <div class="card-body text-center px-4 py-5">
                             <i class="ti-palette icon mb-5 d-inline-block"></i>
                             <h4 class="mb-4">UI Design</h4>
-                            <p>.</p>
+                            <p>I provide all sorts of innovative designs, just send me the requirements and it will done.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4 mb-md-0">
                     <div class="card active-bg-primary hover-shadow shadow">
                         <div class="card-body text-center px-4 py-5">
-                            <i class="ti-vector icon mb-5 d-inline-block"></i>
-                            <h4 class="mb-4">UX Design</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <i class="ti-shortcode icon mb-5 d-inline-block"></i>
+                            <h4 class="mb-4">Android/iOS Development</h4>
+                            <p>I provide with highly functional and intutive applications for both Android and iOS, starting from frontend to backend.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4 mb-md-0">
                     <div class="card hover-shadow shadow">
                         <div class="card-body text-center px-4 py-5">
-                            <i class="ti-panel icon mb-5 d-inline-block"></i>
-                            <h4 class="mb-4">Interaction Design</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <i class="ti-desktop icon mb-5 d-inline-block"></i>
+                            <h4 class="mb-4">Logo Design</h4>
+                            <p>Want a quick overhaul for your logo or want a new one which is aesthetically pleasing.</p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="col-md-4 mb-4 mb-md-0">
+                    <div class="card active-bg-primary hover-shadow shadow">
+                        <div class="card-body text-center px-4 py-5">
+                            <i class="ti-paint-roller icon mb-5 d-inline-block"></i>
+                            <h4 class="mb-4">Editing</h4>
+                            <p>I provide with picture editing services as well.</br>I provide color accurate and aesthetically pleaseing edits of pictures that are provided to me. </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4 mb-md-0">
+                    <div class="card hover-shadow shadow">
+                        <div class="card-body text-center px-4 py-5">
+                            <i class="ti-video-camera icon mb-5 d-inline-block"></i>
+                            <h4 class="mb-4">Cinematography</h4>
+                            <p>Want some reel realistic clips for your company or yourself look no more. I am a visionary cinematographer with a lot of amazing work till date.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4 mb-md-0">
+                    <div class="card active-bg-primary hover-shadow shadow">
+                        <div class="card-body text-center px-4 py-5">
+                            <i class="ti-camera icon mb-5 d-inline-block"></i>
+                            <h4 class="mb-4">Photography</h4>
+                            <p>Want some creative shots for yourself or comapny. Trust me you are at the right place.</br>Click to see some</br>  
+                                <a href="https://www.instagram.com/the.tale.whisperer " class="ti-instagram text-white"> Samples</a>
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    -- /services -->
+    <!--- /services --->
 
     <!-- portfolio -->
     <section class="section">
