--- a/portfolio.html
+++ b/portfolio.html
@@ -222,7 +222,57 @@
 </div>
 </div>
 </br>
-
+<section class="section section-on-footer" data-background="images/backgrounds/bg-dots.png">
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <h2 class="section-title">Achievements</h2>
+      </div>
+      <section class="section bg-primary position-relative testimonial-bg-shapes">
+        <div class="container">
+          <div class="row">
+            <div class="container">
+              <div class="row">
+                <div class="col-12 text-center">
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-10 mx-auto testimonial-slider">
+              <div class="text-center testimonial-content">
+                <i class="ti-line-dotted  text-white icon mb-4 d-inline-block">
+                  <h3 class="text-white ti-medall"> Hack Club </br></h3>
+                    <h4 class=" text-white">Co-Lead at Hack Club SVCE</br>
+                    We have some of the most amazing team members and the</br> best global community of coders around the world.</br> The goal of Hack Club is to help you</br>
+                    become the best version of yourself.</h4>
+                </i>
+              </div>
+              <div class="text-center testimonial-content">
+                <i class="ti-line-dotted  text-white icon mb-4 d-inline-block">
+                  <h3 class="text-white ti-medall"> HackOn </br></h3>
+                  <h4 class=" text-white">Selected for Google Cloud Prize in nation level hackathon</br> "HackON".</h4>
+                </i>
+              </div>
+              <div class="text-center testimonial-content">
+              <i class="ti-line-dotted  text-white icon mb-4 d-inline-block">
+                <h3 class="text-white ti-medall"> Ideathon </br></h3>
+                <h4 class=" text-white">Secured second place in</br> Idea Pitching </br>at college.</h4>
+              </i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- bg shapes -->
+        <img src="images/backgrounds/map.png" alt="map" class="img-fluid bg-map">
+        <img src="images/illustrations/dots-group-v.png" alt="bg-shape" class="img-fluid bg-shape-1">
+        <img src="images/illustrations/leaf-orange.png" alt="bg-shape" class="img-fluid bg-shape-2">
+        <img src="images/illustrations/dots-group-sm.png" alt="bg-shape" class="img-fluid bg-shape-3">
+        <img src="images/illustrations/leaf-pink-round.png" alt="bg-shape" class="img-fluid bg-shape-4">
+      </section>
+      </div>
+    </div>
+  </div>
+</section>
+<br><br><br><br><br><br><br><br>
 <!-- contact -->
 <section class="section section-on-footer" data-background="images/backgrounds/bg-dots.png">
   <div class="container">
