--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <ul class="list-unstyled ml-5 mt-3 position-relative zindex-1">
             <li class="mb-3"><a class="text-white" href="https://github.com/mayukhsil"><i class="ti-github"></i></a></li>
             <li class="mb-3"><a class="text-white" href="https://instagram.com/bantai.bombil"><i class="ti-instagram"></i></a></li>
-            <li class="mb-3"><a class="text-white" href="https://linkedin.com/mayukhsil"><i class="ti-linkedin"></i></a></li>
+            <li class="mb-3"><a class="text-white" href="https://www.linkedin.com/in/mayukh-sil-a16513186/"><i class="ti-linkedin"></i></a></li>
             <li class="mb-3"><a class="text-white" href="https://twitter.com/SilMayukh"><i class="ti-twitter"></i></a></li>
             <li class="mb-3"><a class="text-white" href="#"><i class="ti-dribbble"></i></a></li>
         </ul>
